Fixed the alignment of logo for safari plus small tweaks.

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -83,7 +83,7 @@
 
   &:focus {
     // CLICK STYLES GO IN HERE!
-    background-color: white !important;
-    color: $na-colour-blue !important;
+    background-color: $na-colour-blue !important;
+    color: white !important;
   }
 }
