--- a/_sass/_panel.scss
+++ b/_sass/_panel.scss
@@ -15,6 +15,8 @@ $panel-padding: rem-calc(40);
   padding: 10px 10px 10px 50px;
   text-align: left;
   text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.4em;
 }
 
 .na-panel-header {
