--- a/_sass/_quotes.scss
+++ b/_sass/_quotes.scss
@@ -6,7 +6,6 @@
   }
   p {
     font-style: italic;
-    font-size: .9em;
     text-align: center;
   }
 }
@@ -19,7 +18,6 @@
   }
   p {
     font-style: italic;
-    font-size: .9em;
     text-align: center;
     color: white;
   }
